[package]
name = "interface"
version = "0.1.0"
authors = [
    "Frédéric Tobias Christ <26125115+frederictobiasc@users.noreply.github.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.10.1", features = [
    "async",
    "embassy-net",
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-dhcpv4", "proto-igmp", "proto-ipv4", "socket-dhcpv4", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp"] }
esp-hal-embassy = { version = "0.4.0", features = ["esp32c3"] }
picoserve = { version = "0.12.2", features = ["alloc", "embassy", "log"] }
embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-net = { version = "0.4.0", features = ["dhcpv4-hostname", "dns", "log", "proto-ipv6"] }
embassy-executor = { version = "0.6.1", features = ["nightly", "task-arena-size-40960"] }
embedded-io-async = "0.6.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
